framec_tests/language_specific/java/v3_facade_smoke/negative/strict_malformed_stmt.frm
@target java

system S {
    machine:
        $A {
            e() {
                => $^
                int x = ; // malformed native statement
            }
        }
}

